--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.5.3
   google_fonts: ^4.0.4
   firebase_auth: ^4.4.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
